Fixed the node and conditions button being off screen

--- a/app/src/containers/ConversationActions/ConversationActions.css
+++ b/app/src/containers/ConversationActions/ConversationActions.css
@@ -1,7 +1,7 @@
 @import '../../css/constants.css';
 
 .conversation-actions {
-  height: 100%;
+  height: calc(100% - 28px);
   overflow-y: auto;
   overflow-x: hidden;
 
