--- a/app/src/containers/ConversationConditions/ConversationConditions.css
+++ b/app/src/containers/ConversationConditions/ConversationConditions.css
@@ -1,7 +1,7 @@
 @import '../../css/constants.css';
 
 .conversation-conditions {
-  height: 100%;
+  height: calc(100% - 28px);
   overflow-y: auto;
   overflow-x: hidden;
 
